--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+<title>Reimagined Engine</title>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<h1>Reimagined Engine</h1>
+<div class="w3-container w3-center">
+  <h1 class="w3-green w3-round-large">Reimagined Engine</h1>
+</div>
 
 </body>
 </html>
